# mcp-appium

./: .gitignore  README.md  main.py  pyproject.toml  run_tests.sh
docs/: README.md  best-practices.md  tool-guidelines.md
tests/: .gitignore  README.md  conftest.py  test_action_logging.py  test_async_functions.py  test_error_handling.py  test_gesture_tools.py  test_main.py  test_mcp_server.py
